Bug 1609913 - Fix memory leak of native compositor surfaces. r=sotaro

Differential Revision: https://phabricator.services.mozilla.com/D60379

--HG--
extra : moz-landing-system : lando